force-app/main/default/objects/Account/fields/Daily_Actual__c.field-meta.xml
<CustomField>
    <fullName>Daily_Actual__c</fullName>
    <label>Daily Actual USD</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>