force-app/main/default/objects/Account/fields/Daily_Target__c.field-meta.xml
<CustomField>
    <fullName>Daily_Target__c</fullName>
    <label>Daily Target</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>