force-app/main/default/objects/Account/fields/Days_until_Re_DD_Due__c.field-meta.xml
<CustomField>
    <fullName>Days_until_Re_DD_Due__c</fullName>
    <formula>Re_DD_Due_Date__c - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The number of days between today and Re-DD Due Date</inlineHelpText>
    <label>Days until Re-DD Due</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>