force-app/main/default/objects/Account/fields/DD_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>DD_Completed_Date__c</fullName>
    <inlineHelpText>Automatically populated based on the date due diligence was completed (approved or declined) by the AML team.</inlineHelpText>
    <label>DD Completed Date</label>
    <type>DateTime</type>
</CustomField>