force-app/main/default/objects/Account/fields/DD_Completed_Date_from_DD_History__c.field-meta.xml
<CustomField>
    <fullName>DD_Completed_Date_from_DD_History__c</fullName>
    <label>DD Completed Date from DD History</label>
    <summarizedField>Due_Diligence_History__c.Due_Diligence_Completed_Date__c</summarizedField>
    <summaryForeignKey>Due_Diligence_History__c.Account__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>