force-app/main/default/objects/Account/fields/DD_Duration_to_date__c.field-meta.xml
<CustomField>
    <fullName>DD_Duration_to_date__c</fullName>
    <formula>Reference_Registration__r.DD_Total_Business_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DD Duration (Business Hours) to date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>