force-app/main/default/objects/Account/fields/DD_Elapsed_Time_Days__c.field-meta.xml
<CustomField>
    <fullName>DD_Elapsed_Time_Days__c</fullName>
    <formula>if(ISBLANK( DD_Completed_Date__c),( NOW() - Due_Diligence_Start_Date__c),(DD_Completed_Date__c - Due_Diligence_Start_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DD Elapsed Time (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>