force-app/main/default/objects/Account/fields/DD_Not_Required__c.field-meta.xml
<CustomField>
    <fullName>DD_Not_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DD Not Required</label>
    <type>Checkbox</type>
</CustomField>