force-app/main/default/objects/Account/fields/DD_Status__c.field-meta.xml
<CustomField>
    <fullName>DD_Status__c</fullName>
    <inlineHelpText>Automatically updated based on the progress of DD.</inlineHelpText>
    <label>DD Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Awaiting Client</fullName>
            </value>
            <value>
                <fullName>Referred</fullName>
            </value>
            <value>
                <fullName>Awaiting Approval</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Approval In Progress</fullName>
            </value>
            <value>
                <fullName>DD Approved</fullName>
            </value>
            <value>
                <fullName>DD Declined</fullName>
            </value>
            <value>
                <fullName>Risk Rating Review</fullName>
            </value>
            <value>
                <fullName>Non Responsive</fullName>
            </value>
            <value>
                <fullName>Needs More Time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>