force-app/main/default/objects/Account/fields/Decline_Reason__c.field-meta.xml
<CustomField>
    <fullName>Decline_Reason__c</fullName>
    <description>Mandatory if DD Result is Declined.</description>
    <inlineHelpText>Automatically populated, if the most recent DD on the account was declined.</inlineHelpText>
    <label>Decline Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Risk</fullName>
            </value>
            <value>
                <fullName>Non responsive</fullName>
            </value>
            <value>
                <fullName>DD not met</fullName>
            </value>
            <value>
                <fullName>DD not provided</fullName>
            </value>
            <value>
                <fullName>Not interested</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>Language</fullName>
            </value>
            <value>
                <fullName>Not travel</fullName>
            </value>
            <value>
                <fullName>Needs more time</fullName>
            </value>
            <value>
                <fullName>Application N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>