force-app/main/default/objects/Account/fields/Delivery_Ticket_Activation__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Ticket_Activation__c</fullName>
    <label>Delivery Ticket Activation</label>
    <summaryFilterItems>
        <field>Opportunity.Delivery_Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>