force-app/main/default/objects/Account/fields/Descendant_GDV__c.field-meta.xml
<CustomField>
    <fullName>Descendant_GDV__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Descendant GDV</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>