force-app/main/default/objects/Account/fields/Do_Not_Contact__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Once checked a message will appear at the top of the Account page to alert users not to contact this client.</inlineHelpText>
    <label>Do Not Contact</label>
    <type>Checkbox</type>
</CustomField>