force-app/main/default/objects/Account/fields/Drawloop_Company_Reg_No__c.field-meta.xml
<CustomField>
    <fullName>Drawloop_Company_Reg_No__c</fullName>
    <formula>IF(!ISBLANK(Business_Number__c), Business_Number__c, IF(!ISBLANK(Business_Tax_Number__c), Business_Tax_Number__c, &#39;&#39;))</formula>
    <label>Drawloop Company Reg No</label>
    <type>Text</type>
</CustomField>