force-app/main/default/objects/Account/fields/Due_Diligence_Commentary__c.field-meta.xml
<CustomField>
    <fullName>Due_Diligence_Commentary__c</fullName>
    <label>Due Diligence Commentary</label>
    <type>TextArea</type>
</CustomField>