force-app/main/default/objects/Account/fields/Due_Diligence_Completed__c.field-meta.xml
<CustomField>
    <fullName>Due_Diligence_Completed__c</fullName>
    <label>DD Completed</label>
    <type>DateTime</type>
</CustomField>