force-app/main/default/objects/Account/fields/Due_Diligence_Owner__c.field-meta.xml
<CustomField>
    <fullName>Due_Diligence_Owner__c</fullName>
    <label>Due Diligence Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>