force-app/main/default/objects/Account/fields/Due_Diligence_Period_Days__c.field-meta.xml
<CustomField>
    <fullName>Due_Diligence_Period_Days__c</fullName>
    <formula>if(ISBLANK( DD_Completed_Date__c),( NOW() - Due_Diligence_Start_Date__c),(DD_Completed_Date__c - Due_Diligence_Start_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Due Diligence Period (Days)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>