force-app/main/default/objects/Account/fields/Due_Diligence_Period_Working_Days__c.field-meta.xml
<CustomField>
    <fullName>Due_Diligence_Period_Working_Days__c</fullName>
    <formula>if(isblank(DD_Completed_Date__c),

(5 * ( FLOOR( ( TODAY() - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( TODAY() - DATE( 1900, 1, 8), 7 ) ) )
-
(5 * ( FLOOR( ( DATEVALUE(Due_Diligence_Start_Date__c) - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( DATEVALUE(Due_Diligence_Start_Date__c) - DATE( 1900, 1, 8), 7 ) ) ),
(5 * ( FLOOR( ( DATEVALUE(DD_Completed_Date__c) - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( DATEVALUE(DD_Completed_Date__c) - DATE( 1900, 1, 8), 7 ) ) )
-
(5 * ( FLOOR( ( DATEVALUE(Due_Diligence_Start_Date__c) - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( DATEVALUE(Due_Diligence_Start_Date__c) - DATE( 1900, 1, 8), 7 ) ) ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Due Diligence Period (Working Days)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>