force-app/main/default/objects/Account/fields/Due_Diligence_Risk_Factors__c.field-meta.xml
<CustomField>
    <fullName>Due_Diligence_Risk_Factors__c</fullName>
    <inlineHelpText>Populated by the AML team during the due diligence process.</inlineHelpText>
    <label>Risk Factors</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Fraud</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>PEP Match</fullName>
            </value>
            <value>
                <fullName>Sanction List</fullName>
            </value>
            <value>
                <fullName>Suspicion</fullName>
            </value>
            <value>
                <fullName>Transaction Monitoring</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>