force-app/main/default/objects/Account/fields/Due_Diligence_Risk_Rating__c.field-meta.xml
<CustomField>
    <fullName>Due_Diligence_Risk_Rating__c</fullName>
    <inlineHelpText>Populated by the AML team during the due diligence process.</inlineHelpText>
    <label>Risk Rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>