force-app/main/default/objects/Account/fields/Due_Diligence_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Diligence_Start_Date__c</fullName>
    <label>DD Start Date</label>
    <type>DateTime</type>
</CustomField>