force-app/main/default/objects/Account/fields/Due_Diligence_Status__c.field-meta.xml
<CustomField>
    <fullName>Due_Diligence_Status__c</fullName>
    <label>Due Diligence Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>