force-app/main/default/objects/Account/fields/Due_Diligence_Type__c.field-meta.xml
<CustomField>
    <fullName>Due_Diligence_Type__c</fullName>
    <label>Due Diligence Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Existing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>