force-app/main/default/objects/Account/fields/ECN__c.field-meta.xml
<CustomField>
    <fullName>ECN__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <inlineHelpText>Automatically populated. This field is only populated for accounts which are activated in client database.</inlineHelpText>
    <label>ECN</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>