force-app/main/default/objects/Account/fields/ECN_Number__c.field-meta.xml
<CustomField>
    <fullName>ECN_Number__c</fullName>
    <formula>VALUE(ECN__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ECN (Number)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>