force-app/main/default/objects/Account/fields/EFT_Bank_Test_Completed__c.field-meta.xml
<CustomField>
    <fullName>EFT_Bank_Test_Completed__c</fullName>
    <label>EFT Bank Test Completed</label>
    <type>Date</type>
</CustomField>