force-app/main/default/objects/Account/fields/EFT_Status__c.field-meta.xml
<CustomField>
    <fullName>EFT_Status__c</fullName>
    <inlineHelpText>Automatically populated based on the the completion of the EFT settlement.</inlineHelpText>
    <label>EFT Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contract In Flight</fullName>
            </value>
            <value>
                <fullName>Awaiting EFT Settlement</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>