force-app/main/default/objects/Account/fields/eNett_com_updates__c.field-meta.xml
<CustomField>
    <fullName>eNett_com_updates__c</fullName>
    <defaultValue>false</defaultValue>
    <label>eNett.com updates</label>
    <type>Checkbox</type>
</CustomField>