force-app/main/default/objects/Account/fields/eNett_products__c.field-meta.xml
<CustomField>
    <fullName>eNett_products__c</fullName>
    <label>eNett Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>VANs</fullName>
            </value>
            <value>
                <fullName>feeNett</fullName>
            </value>
            <value>
                <fullName>VirtualTerminal</fullName>
            </value>
            <value>
                <fullName>eNett EFT</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>