force-app/main/default/objects/Account/fields/Financial_Contact_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Financial_Contact_First_Name__c</fullName>
    <description>This is updated automatically when a contact linked to this account is set to the Financial job role</description>
    <label>Financial Contact First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>