force-app/main/default/objects/Account/fields/First_Transaction_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Transaction_Date__c</fullName>
    <inlineHelpText>This field is automatically set.  The date represents the first settled transaction</inlineHelpText>
    <label>First Settled Transaction Date</label>
    <type>Date</type>
</CustomField>