force-app/main/default/objects/Account/fields/FOA_Account__c.field-meta.xml
<CustomField>
    <fullName>FOA_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FOA Account</label>
    <type>Checkbox</type>
</CustomField>