force-app/main/default/objects/Account/fields/GDS_multi_select__c.field-meta.xml
<CustomField>
    <fullName>GDS_multi_select__c</fullName>
    <label>GDS (multi-select)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Abacus</fullName>
            </value>
            <value>
                <fullName>Amadeus</fullName>
            </value>
            <value>
                <fullName>Apollo</fullName>
            </value>
            <value>
                <fullName>Axess</fullName>
            </value>
            <value>
                <fullName>Galileo</fullName>
            </value>
            <value>
                <fullName>Infini</fullName>
            </value>
            <value>
                <fullName>Sabre</fullName>
            </value>
            <value>
                <fullName>Sirena</fullName>
            </value>
            <value>
                <fullName>Topas</fullName>
            </value>
            <value>
                <fullName>Travelsky</fullName>
            </value>
            <value>
                <fullName>Worldspan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>