force-app/main/default/objects/Account/fields/GDV_From_Lead__c.field-meta.xml
<CustomField>
    <fullName>GDV_From_Lead__c</fullName>
    <label>GDV From Lead</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>