force-app/main/default/objects/Account/fields/GWTTP_Compliance_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>GWTTP_Compliance_Start_Date__c</fullName>
    <label>GWTTP Compliance Start Date</label>
    <type>Date</type>
</CustomField>