force-app/main/default/objects/Account/fields/GWTTP_Compliant__c.field-meta.xml
<CustomField>
    <fullName>GWTTP_Compliant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GWTTP Compliant</label>
    <type>Checkbox</type>
</CustomField>