force-app/main/default/objects/Account/fields/Historical_Account__c.field-meta.xml
<CustomField>
    <fullName>Historical_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Historical Account</label>
    <type>Checkbox</type>
</CustomField>