force-app/main/default/objects/Account/fields/IATA_ID__c.field-meta.xml
<CustomField>
    <fullName>IATA_ID__c</fullName>
    <label>IATA/ARC/TIDS Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>