force-app/main/default/objects/Account/fields/Industry_Type_del__c.field-meta.xml
<CustomField>
    <fullName>Industry_Type_del__c</fullName>
    <label>Industry Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>