force-app/main/default/objects/Account/fields/Initial_QO_Completed__c.field-meta.xml
<CustomField>
    <fullName>Initial_QO_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Initial QO Completed</label>
    <type>Checkbox</type>
</CustomField>