force-app/main/default/objects/Account/fields/IntegratorModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>IntegratorModifiedDate__c</fullName>
    <description>This field is used by the Salesforce integrator and should not be modified unless you understand the data-flow consequences</description>
    <inlineHelpText>WARNING This field is used by the Salesforce integrator.</inlineHelpText>
    <label>IntegratorModifiedDate</label>
    <type>DateTime</type>
</CustomField>