force-app/main/default/objects/Account/fields/Integrators_Used__c.field-meta.xml
<CustomField>
    <fullName>Integrators_Used__c</fullName>
    <label>Integrators Used</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agoda</fullName>
            </value>
            <value>
                <fullName>Conferma</fullName>
            </value>
            <value>
                <fullName>Cornerstone</fullName>
            </value>
            <value>
                <fullName>Dolphin Dynamics</fullName>
            </value>
            <value>
                <fullName>Flightgenius</fullName>
            </value>
            <value>
                <fullName>Gateway</fullName>
            </value>
            <value>
                <fullName>Hitchhiker</fullName>
            </value>
            <value>
                <fullName>Hotelzon</fullName>
            </value>
            <value>
                <fullName>IGA Voyages</fullName>
            </value>
            <value>
                <fullName>Mr Orange</fullName>
            </value>
            <value>
                <fullName>Multicom</fullName>
            </value>
            <value>
                <fullName>Navitas</fullName>
            </value>
            <value>
                <fullName>Orchestra</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>PayU</fullName>
            </value>
            <value>
                <fullName>Pyton</fullName>
            </value>
            <value>
                <fullName>Sapeig Viaxoft</fullName>
            </value>
            <value>
                <fullName>Travelgate</fullName>
            </value>
            <value>
                <fullName>Travelport Desktop</fullName>
            </value>
            <value>
                <fullName>Traveltek</fullName>
            </value>
            <value>
                <fullName>Vibe Software</fullName>
            </value>
            <value>
                <fullName>Voxel (Bavel)</fullName>
            </value>
            <value>
                <fullName>Ypsilon.Net</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>