force-app/main/default/objects/Account/fields/Internal_Account_Approval__c.field-meta.xml
<CustomField>
    <fullName>Internal_Account_Approval__c</fullName>
    <inlineHelpText>This field will be set when the associated Task Approval picklist is set to either Approved or Declined.  Until then, the field will remain in the Pending status.</inlineHelpText>
    <label>Internal Account Approval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>