force-app/main/default/objects/Account/fields/IsApi__c.field-meta.xml
<CustomField>
    <fullName>IsApi__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Don&#39;t mess with this or else</description>
    <inlineHelpText>Don&#39;t mess with this or else</inlineHelpText>
    <label>IsApi</label>
    <type>Checkbox</type>
</CustomField>