force-app/main/default/objects/Account/fields/Last_DD_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_DD_Completed_Date__c</fullName>
    <description>For Optal Reporting SF-4790</description>
    <inlineHelpText>For Optal Reporting</inlineHelpText>
    <label>Last DD Completed Date</label>
    <type>DateTime</type>
</CustomField>