force-app/main/default/objects/Account/fields/Last_Re_DD_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Re_DD_Due_Date__c</fullName>
    <label>Last Re-DD Due Date</label>
    <type>Date</type>
</CustomField>