force-app/main/default/objects/Account/fields/Last_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Last_Transaction__c</fullName>
    <label>Latest Settled Transaction Date</label>
    <type>Date</type>
</CustomField>