force-app/main/default/objects/Account/fields/Last_Transaction_Report_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Transaction_Report_Date__c</fullName>
    <label>Last Transaction Report Date</label>
    <summarizedField>TransactionalData__c.ReportDate__c</summarizedField>
    <summaryForeignKey>TransactionalData__c.LinkedAccount__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>