force-app/main/default/objects/Account/fields/Last_Upload_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Upload_Date__c</fullName>
    <label>Last Upload Date</label>
    <type>Date</type>
</CustomField>