force-app/main/default/objects/Account/fields/Latest_update_Account__c.field-meta.xml
<CustomField>
    <fullName>Latest_update_Account__c</fullName>
    <inlineHelpText>Please clear all values in this field before you input your latest update</inlineHelpText>
    <label>Latest update (Account)</label>
    <type>TextArea</type>
</CustomField>