force-app/main/default/objects/Account/fields/Lead_source__c.field-meta.xml
<CustomField>
    <fullName>Lead_source__c</fullName>
    <label>Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>eNett Campaign</fullName>
            </value>
            <value>
                <fullName>eNett Online Registration</fullName>
            </value>
            <value>
                <fullName>Inbound call</fullName>
            </value>
            <value>
                <fullName>Industry Event</fullName>
            </value>
            <value>
                <fullName>Partner Campaign</fullName>
            </value>
            <value>
                <fullName>Sales Initiated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>