force-app/main/default/objects/Account/fields/Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>Legal_Name__c</fullName>
    <inlineHelpText>Automatically populated based on the Registered business name.</inlineHelpText>
    <label>Legal Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>