force-app/main/default/objects/Account/fields/Legal_Name_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Legal_Name_Change_Date__c</fullName>
    <label>Legal Name Change Date</label>
    <type>Date</type>
</CustomField>