force-app/main/default/objects/Account/fields/Legal_Name_Editor__c.field-meta.xml
<CustomField>
    <fullName>Legal_Name_Editor__c</fullName>
    <label>Legal Name Editor</label>
    <length>50</length>
    <type>Text</type>
</CustomField>