force-app/main/default/objects/Account/fields/Legal_Parent__c.field-meta.xml
<CustomField>
    <fullName>Legal_Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Legal Parent Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>LegalAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>