force-app/main/default/objects/Account/fields/Legal_Parent_ECN__c.field-meta.xml
<CustomField>
    <fullName>Legal_Parent_ECN__c</fullName>
    <formula>Legal_Parent__r.ECN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legal Parent ECN</label>
    <type>Text</type>
</CustomField>