force-app/main/default/objects/Account/fields/Legal_Parent_Name__c.field-meta.xml
<CustomField>
    <fullName>Legal_Parent_Name__c</fullName>
    <formula>Legal_Parent__r.Name</formula>
    <label>Legal Parent Account</label>
    <type>Text</type>
</CustomField>