force-app/main/default/objects/Account/fields/Manual_Re_DD_Checklist_Created__c.field-meta.xml
<CustomField>
    <fullName>Manual_Re_DD_Checklist_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manual Re DD Checklist Created</label>
    <type>Checkbox</type>
</CustomField>