force-app/main/default/objects/Account/fields/Monthly_Actual__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Actual__c</fullName>
    <label>Monthly Actual USD</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>