force-app/main/default/objects/Account/fields/Monthly_Aggregate__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Aggregate__c</fullName>
    <label>My Children&#39;s Monthly Actual USD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>