force-app/main/default/objects/Account/fields/Monthly_Aggregate_Inclusive__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Aggregate_Inclusive__c</fullName>
    <formula>Monthly_Actual__c +  Monthly_Aggregate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Combined Monthly Actual USD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>