force-app/main/default/objects/Account/fields/Monthly_Target__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Target__c</fullName>
    <label>Monthly Target</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>