force-app/main/default/objects/Account/fields/Non_Disclosure_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Non_Disclosure_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>To be selected if the client has specific non disclosure agreements with eNett.</inlineHelpText>
    <label>Non Disclosure Agreement</label>
    <type>Checkbox</type>
</CustomField>