force-app/main/default/objects/Account/fields/Old_Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>Old_Legal_Name__c</fullName>
    <label>Old Legal Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>