force-app/main/default/objects/Account/fields/On_Boarding_Commentary__c.field-meta.xml
<CustomField>
    <fullName>On_Boarding_Commentary__c</fullName>
    <label>On Boarding Commentary</label>
    <type>TextArea</type>
</CustomField>