force-app/main/default/objects/Account/fields/On_Boarding_Commentary_History__c.field-meta.xml
<CustomField>
    <fullName>On_Boarding_Commentary_History__c</fullName>
    <label>On Boarding Commentary History</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>