force-app/main/default/objects/Account/fields/Onboarding_Owner__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Owner__c</fullName>
    <label>Onboarding Owner</label>
    <length>50</length>
    <type>Text</type>
</CustomField>